--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,11 @@
     "stdlib.h": "c",
     "in.h": "c",
     "string.h": "c",
-    "cstdlib": "c"
+    "cstdlib": "c",
+    "array": "c",
+    "string": "c",
+    "string_view": "c",
+    "ranges": "c"
   },
   "editor.formatOnSave": true
 }
